--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
+.rvmrc 
+
 # Ignore bundler config
 /.bundle
 
@@ -11,6 +13,7 @@ config/database.yml
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+/db/schema.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
